# ILStudio

./: .gitignore  .gitmodules  README.md  eval_real.py  eval_sim.py  pyproject.toml  start_policy_server.py  start_teleop_controller.py  start_teleop_recorder.py  train.py
.cursor/rules/: policy-rule.mdc
benchmark/: base.py  utils.py
benchmark/libero/: README.md  __init__.py  pyproject.toml
benchmark/metaworld/: README.md  __init__.py  pyproject.toml  task_desc.py
benchmark/robomimic/: README.md  __init__.py  constant.py  pyproject.toml
configs/: __init__.py  loader.py  utils.py
configs/action_manager/: README.md  basic.yaml  delay_free.yaml  older_first.yaml  temporal_agg.yaml  temporal_older.yaml  truncated.yaml  truncated_aggressive.yaml  truncated_conservative.yaml
configs/env/: aloha_transfer.yaml  d4rl_door.yaml  libero_object.yaml  libero_object_0.yaml  libero_object_0_twocam.yaml  libero_object_1.yaml  libero_object_2.yaml  libero_object_3.yaml  libero_object_wrist.yaml  multi_env_example.yaml  mw_00.yaml  mw_01.yaml  mw_03.yaml  mw_20.yaml  mw_38.yaml  mw_41.yaml  mw_all.yaml  mw_easy.yaml  mw_easy00.yaml  mw_easy01.yaml  mw_easy02.yaml  mw_easy03.yaml  mw_easy04.yaml  mw_easy05.yaml  mw_easy06.yaml  mw_hard.yaml  mw_medium.yaml  mw_veryhard.yaml  panda_gym.yaml  panda_gym_dense.yaml  robomimic.yaml  robomimic_can_lowdim.yaml  robomimic_square_lowdim.yaml  robomimic_transport_lowdim.yaml
configs/policy/: act.yaml  act_droid.yaml  act_koch.yaml  act_mw.yaml  act_openx.yaml  act_robomimic.yaml  diffusion_policy.yaml  divla.yaml  dp_d4rl.yaml  flow_matching.yaml  fm_can.yaml  fm_door.yaml  fm_square.yaml  fm_transport.yaml  mlp.yaml  mlp_camera.yaml  mlp_can.yaml  mlp_d4rl_door.yaml  mlp_d4rl_hammer.yaml  mlp_d4rl_relocate.yaml  mlp_large.yaml  mlp_lowdim.yaml  mlp_small.yaml  mlp_transport.yaml  octo.yaml  octo_aloha.yaml  openvla.yaml  openvla_full.yaml  openvla_libero.yaml  openvla_lora.yaml  openvla_lora_mw.yaml  openvla_widowx.yaml  pi0.yaml  pi0_aloha.yaml  pi0_libero_object.yaml  pi0_libero_object_full.yaml  pi0_libero_object_full_ck16.yaml  pi0_mw.yaml  qwen25dp.yaml  qwen2dp.yaml  (+6 more)
configs/robot/: agilex_aloha.yaml  agilex_aloha_teleop.yaml  bi_so101_follower.yaml  dummy.yaml  koch_follower.yaml  koch_follower_win.yaml  so101_follower.yaml  so101_follower_blk.yaml  so101_follower_win.yaml
configs/task/: agilex_transfer_cube.yaml  bc_z.yaml  berkeley_autolab_ur5.yaml  bridge_data_v2.yaml  d4rl_door_cloned.yaml  d4rl_door_expert.yaml  d4rl_door_human.yaml  d4rl_hammer_cloned.yaml  d4rl_hammer_expert.yaml  d4rl_relocate_cloned.yaml  d4rl_relocate_expert.yaml  droid_mini.yaml  fractal20220817_data.yaml  insertion_human.yaml  (+30 more)
data_utils/: data_loader.py  dataset_wrappers.py  normalize.py  utils.py
docs/: 12_action_manager.md
policy/: policy_loader.py  trainer.py  utils.py
scripts/: example_eval_openvla.sh
utils/: __init__.py  logger.py
(+89 files in other folders)
