[project]
name = "metaworld-project"
version = "0.1.0"
description = "metaworld"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.17.0",
    "torchdiffeq",
    "transformers<=4.45.2",
    "accelerate",
    "peft>=0.17.1",
    "opencv-python>=4.9.0.80",
    "rospkg==1.5.0",
    "imageio==2.37.0",
    "pillow>=11.3.0",
    "diffusers==0.35.1",
    "tensorflow==2.15.0",
    "tf-keras==2.15.0",
    "tensorflow_datasets",
    "tianshou==0.2.0",
    "pytest",
    "dm_control==1.0.14",
    "matplotlib",
    "robosuite==1.4.0",
    "imageio-ffmpeg==0.6.0",
    "pynput",
    "numpy==1.26.4",
    "mujoco",
    "dlimp @ git+https://github.com/kvablack/dlimp@5edaa4691567873d495633f2708982b42edf1972",
    "torchdata<=0.9.0",
    "lerobot==0.3.*",
    "rich",
    "timm>=0.9.10",
    "draccus",
    "tensorflow_graphics",
]


[tool.uv]
default-groups = []

