[project]
name = "robomimic-project"
version = "0.1.0"
description = "libero"
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "transformers<=4.45.2",
    "accelerate",
    "peft>=0.17.1",
    "opencv-python>=4.9.0.80",
    "rospkg==1.5.0",
    "imageio",
    "pillow>=11.3.0",
    "tianshou==0.2.0",
    "pytest",
    "dm_control==1.0.14",
    "matplotlib",
    "robosuite==1.5.1",
    "imageio-ffmpeg==0.6.0",
    "pynput",
    "numpy==1.26.4",
    "dlimp @ git+https://github.com/kvablack/dlimp@5edaa4691567873d495633f2708982b42edf1972",
]

[tool.uv]
default-groups = []

[tool.uv.sources]
libero = { path = "../../third_party/libero", editable = true }
